--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="block block-60">
                     <button id="btn-reset">Reset</button>
-                    <button>Open item</button>
+                    <button id="btn-open-item">Open "Scientific American"</button>
                     <button>Open item</button>
                 </div>
                 <div class="block block-60">
@@ -113,7 +113,7 @@
                         "icon": "fa fa-newspaper-o",
                         "items": [
                             { "label": "National Geographic" },
-                            { "label": "Scientific American" },
+                            { "label": "Scientific American", id: "sci_am" },
                             { "label": "The Spectator" },
                             { "label": "The Rambler" },
                             { "label": "Physics World" },
@@ -188,6 +188,10 @@
             $('#mp-menu-left').auCMenu(options_left);
             var api_left = $('#mp-menu-left').data('auCMenu');
 
+            $('#mp-menu-left').on('selected', function (e, args) {
+                console.log('selected: ' + args.item);
+            });
+
             $('#trigger-left').on('click', function (e) {
                 e.stopPropagation();
                 api_left.open();
@@ -221,6 +225,11 @@
             $('#btn-reset').on('click', function () {
                 api_left.reset();
                 api_right.reset();
+            });
+
+            $('#btn-open-item').on('click', function (e) {
+                e.stopPropagation();
+                api_left.open('sci_am');
             });
         });
     </script>
