--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Multi-Level Menu</title>
     <meta name="description" content="Multi-Level Menu: Off-screen navigation with multiple levels" />
     <meta name="keywords" content="multi-level, menu, navigation, off-canvas, off-screen, mobile, levels, nested, transform" />
-    <meta name="author" content="Codrops" />
     <meta name="author" content="Mario Vernari" />
+    <meta name="author" content="Codrops" />
     <!--<link rel="shortcut icon" href="../favicon.ico">-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -17,6 +17,13 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
 </head>
 <body>
+    <div id="page-overlay" style="display:none"></div>
+
+    <nav id="mp-menu-left"></nav>
+
+    <nav id="mp-menu-right"></nav>
+
+
     <nav class="navbar">
         <div style="position:absolute; left:20px; top:12px">
             <a href="#" id="trigger-left">Open Menu</a>
@@ -25,6 +32,7 @@
             <a href="#" id="trigger-right">Open/Close Menu</a>
         </div>
     </nav>
+
     <div class="container">
         <header class="codrops-header">
             <h1>Multi-Level Menu</h1>
@@ -49,16 +57,6 @@
             </div>
         </div>
     </div>
-
-    <div id="page-overlay" style="display:none"></div>
-
-    <nav id="mp-menu-left">
-    </nav>
-
-
-    <nav id="mp-menu-right">
-    </nav>
-
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/aucmenu.js"></script>
@@ -291,14 +289,17 @@
                 api_right.resize(w, h);
             });
 
-            $('#page-overlay').on('click', function () {
-                api_left.close();
-            });
+            $('#page-overlay')
+                .on('click', function () {
+                    //e.stopPropagation();
+                    api_left.close();
+                });
 
             function updateOverlay() {
                 var show = api_left.isOpen() || api_right.isOpen();
                 var ovl = $('#page-overlay');
                 show ? ovl.show() : ovl.hide();
+                viewportLocker.enable(show);
             }
 
             $('#btn-reset').on('click', function () {
@@ -311,6 +312,43 @@
                 api_left.open('sci_am');
             });
         });
+
+
+        var viewportLocker = (function () {
+            var en = false;
+
+            function sp(e) {
+                e.stopPropagation();
+            }
+
+            function spx(e) {
+                e.stopPropagation();
+                e.preventDefault();
+            }
+
+            function update() {
+                var kw = en ? 'on' : 'off';
+
+                $(document)
+                    [kw]('touchstart touchend', sp)
+                    [kw]('touchmove', spx);
+
+                $('#page-overlay')
+                    [kw]('touchstart', sp)
+                    [kw]('touchmove', spx);
+            }
+
+            return {
+                enable: function (v) {
+                    v = !!v;
+                    if (v !== en) {
+                        en = v;
+                        update();
+                    }
+                }
+            }
+        })();
+
     </script>
 </body>
 </html>
