--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Multi-Level Menu</title>
     <meta name="description" content="Multi-Level Menu: Off-screen navigation with multiple levels" />
@@ -14,7 +15,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <!--<link rel="stylesheet" type="text/css" href="css/icons.css" />-->
-    <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <link rel="stylesheet" type="text/css" href="/libs/aucmenu/aucmenu.css" />
 </head>
 <body>
     <div id="page-overlay" style="display:none"></div>
@@ -58,8 +59,8 @@
         </div>
     </div>
 
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/aucmenu.js"></script>
+    <script src="/libs/jquery-3.1.1.min.js"></script>
+    <script src="/libs/aucmenu/aucmenu.js"></script>
     <script>
         $(function () {
             var menu = {
